// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Step Component Should match the snapshot 1`] = `
.c0 {
  list-style-type: none;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 12px;
  position: relative;
  text-align: center;
  margin-top: 50px;
  color: #7b909c;
}

.c0:after {
  position: absolute;
  top: 15px;
  left: -50%;
  width: 100%;
  height: 2px;
  content: '';
  z-index: -1;
}

.c0:before {
  width: 36px;
  height: 36px;
  line-height: 30px;
  content: '';
  display: block;
  text-align: center;
  margin: 0 auto 10px;
  border-radius: 50%;
}

.c0:first-child:after {
  content: none;
}

.c0:after {
  background-color: #d1d8dc;
}

.c0:before {
  background-color: #FFFFFF;
  border: 2px solid #d1d8dc;
}

.c1 {
  position: absolute;
  top: -24px;
  margin: 0 auto;
  padding: 4px;
  overflow: hidden;
  width: 100%;
  word-wrap: break-word;
}

@media (max-width:px) {
  .c0 {
    font-size: 10px;
  }
}

@media (min-width:NaNpx) and (max-width:px) {
  .c1 {
    top: -34px;
  }
}

@media (max-width:px) {
  .c1 {
    top: -30px;
  }
}

<li
  className="c0"
>
  <p
    className="c1"
  >
    Step 1
  </p>
  
</li>
`;

exports[`Step Component Should match the snapshot with icon 1`] = `
.c2 {
  position: relative;
  top: -42px;
  color: #d1d8dc;
}

.c0 {
  list-style-type: none;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 12px;
  position: relative;
  text-align: center;
  margin-top: 50px;
  color: #7b909c;
}

.c0:after {
  position: absolute;
  top: 15px;
  left: -50%;
  width: 100%;
  height: 2px;
  content: '';
  z-index: -1;
}

.c0:before {
  width: 36px;
  height: 36px;
  line-height: 30px;
  content: '';
  display: block;
  text-align: center;
  margin: 0 auto 10px;
  border-radius: 50%;
}

.c0:first-child:after {
  content: none;
}

.c0:after {
  background-color: #d1d8dc;
}

.c0:before {
  background-color: #FFFFFF;
  border: 2px solid #d1d8dc;
}

.c1 {
  position: absolute;
  top: -24px;
  margin: 0 auto;
  padding: 4px;
  overflow: hidden;
  width: 100%;
  word-wrap: break-word;
}

@media (max-width:px) {
  .c0 {
    font-size: 10px;
  }
}

@media (min-width:NaNpx) and (max-width:px) {
  .c1 {
    top: -34px;
  }
}

@media (max-width:px) {
  .c1 {
    top: -30px;
  }
}

<li
  className="c0"
>
  <p
    className="c1"
  >
    Step 1
  </p>
  <span
    aria-hidden="true"
    className="material-icons MuiIcon-root-1 c2"
    status=""
    style={
      Object {
        "color": "",
      }
    }
  >
    person
  </span>
</li>
`;

exports[`Step Component Should match the snapshot with status active 1`] = `
.c0 {
  list-style-type: none;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 12px;
  position: relative;
  text-align: center;
  margin-top: 50px;
  color: #005BA2;
}

.c0:after {
  position: absolute;
  top: 15px;
  left: -50%;
  width: 100%;
  height: 2px;
  content: '';
  z-index: -1;
}

.c0:before {
  width: 36px;
  height: 36px;
  line-height: 30px;
  content: '';
  display: block;
  text-align: center;
  margin: 0 auto 10px;
  border-radius: 50%;
}

.c0:first-child:after {
  content: none;
}

.c0:after {
  background-color: #005BA2;
}

.c0:before {
  background-color: #005BA2;
  border: 2px solid #005BA2;
}

.c1 {
  position: absolute;
  top: -24px;
  margin: 0 auto;
  padding: 4px;
  overflow: hidden;
  width: 100%;
  word-wrap: break-word;
}

@media (max-width:px) {
  .c0 {
    font-size: 10px;
  }
}

@media (min-width:NaNpx) and (max-width:px) {
  .c1 {
    top: -34px;
  }
}

@media (max-width:px) {
  .c1 {
    top: -30px;
  }
}

<li
  className="c0"
>
  <p
    className="c1"
  >
    Step 1
  </p>
  
</li>
`;

exports[`Step Component Should match the snapshot with status done 1`] = `
.c0 {
  list-style-type: none;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 12px;
  position: relative;
  text-align: center;
  margin-top: 50px;
  color: #7b909c;
}

.c0:after {
  position: absolute;
  top: 15px;
  left: -50%;
  width: 100%;
  height: 2px;
  content: '';
  z-index: -1;
}

.c0:before {
  width: 36px;
  height: 36px;
  line-height: 30px;
  content: '';
  display: block;
  text-align: center;
  margin: 0 auto 10px;
  border-radius: 50%;
}

.c0:first-child:after {
  content: none;
}

.c0:after {
  background-color: #005BA2;
}

.c0:before {
  background-color: #FFFFFF;
  border: 2px solid #005BA2;
}

.c1 {
  position: absolute;
  top: -24px;
  margin: 0 auto;
  padding: 4px;
  overflow: hidden;
  width: 100%;
  word-wrap: break-word;
}

@media (max-width:px) {
  .c0 {
    font-size: 10px;
  }
}

@media (min-width:NaNpx) and (max-width:px) {
  .c1 {
    top: -34px;
  }
}

@media (max-width:px) {
  .c1 {
    top: -30px;
  }
}

<li
  className="c0"
>
  <p
    className="c1"
  >
    Step 1
  </p>
  
</li>
`;
